@@ -3188,7 +3188,7 @@ AT_CLEANUP
 
 
 AT_SETUP([ACUCOBOL WINDOW statements])
-AT_KEYWORDS([misc acu extensions])
+AT_KEYWORDS([misc acu extensions screen])
 
 # TODO: need a better tests when we implement this,
 #       likely splitted into multiple ones
@@ -3204,7 +3204,7 @@ AT_DATA([prog.cob], [
        PROCEDURE DIVISION.
        MAIN.
            DISPLAY WINDOW, LINE 1, COLUMN 29, SIZE 51, LINES 12,
-               ERASE, POP-UP AREA IS WINDOW-HANDLE
+               ERASE SCREEN BOXED SHADOW, POP-UP AREA IS WINDOW-HANDLE
            END-DISPLAY
            DISPLAY "THIS IS TEXT IN A WINDOW"
            DISPLAY FLOATING WINDOW UPON WINDOW-HANDLE,
@@ -3227,12 +3227,54 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE_ONLY -std=acu-strict prog.cob], [1], [],
 [prog.cob: in paragraph 'MAIN':
 prog.cob: 11: warning: GRAPHICAL WINDOW is not implemented
-prog.cob: 12: error: syntax error, unexpected POP-UP, expecting LINE or SCREEN
 prog.cob: 15: warning: GRAPHICAL WINDOW is not implemented
 prog.cob: 20: warning: GRAPHICAL WINDOW is not implemented
 prog.cob: 21: warning: GRAPHICAL WINDOW is not implemented
-prog.cob: 23: error: HANDLE must be either a generic or a WINDOW HANDLE
+prog.cob: 23: error: HANDLE must be either a generic or a WINDOW HANDLE or X(10)
 prog.cob: 25: warning: GRAPHICAL CONTROL is not implemented
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([DISPLAY MESSAGE BOX])
+AT_KEYWORDS([misc acu extensions screen])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE SECTION.
+       77  my-text             pic x(10) value "TEXT".
+       78  MB-OK               VALUE 1.
+       78  MB-YES-NO           VALUE 2.
+       78  MB-OK-CANCEL        VALUE 3.
+       78  MB-YES-NO-CANCEL    VALUE 4.
+       78  MB-YES              VALUE 1.
+       78  MB-NO               VALUE 2.
+       78  MB-CANCEL           VALUE 3.
+       78  MB-DEFAULT-ICON     VALUE 1.
+       78  MB-WARNING-ICON     VALUE 2.
+       78  MB-ERROR-ICON       VALUE 3.
+       PROCEDURE DIVISION.
+           DISPLAY MESSAGE "Important"
+                   TITLE "Very important"
+                   TYPE = MB-OK
+                   ICON IS MB-WARNING-ICON
+           DISPLAY MESSAGE "This is" space "my" space my-text
+           DISPLAY MESSAGE BOX "More messages?"
+                   TYPE  MB-YES-NO
+                   TITLE = "box title"
+                   DEFAULT IS MB-YES
+                   RETURNING RETURN-CODE
+      *
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY -std=acu-strict prog.cob], [0], [],
+[prog.cob: 18: warning: handling of DISPLAY MESSAGE is unfinished; implementation is likely to be changed
+prog.cob: 22: warning: handling of DISPLAY MESSAGE is unfinished; implementation is likely to be changed
+prog.cob: 23: warning: handling of DISPLAY MESSAGE is unfinished; implementation is likely to be changed
 ])
 
 AT_CLEANUP
