@@ -4,6 +4,7 @@
 	* reserved.c: fixed bug #402 - optional WITH clause functional
 	* parser.y, reserved.c: FR #78 more phrases for DISPLAY WINDOW
 	* parser.y, typeck.c: FR #77 fixed HANDLE references
+	* parser.y, reserved.c: FR #190 minimal support for DISPLAY MESSAGE BOX
 
 2017-07-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
